source/blender/blenfont/intern/blf_internal_types.h
@@ -217,6 +217,9 @@ typedef struct FontBLF {
 	/* freetype2 lib handle. */
 	FT_Library ft_lib;
 
+	/* Mutex lock for library */
+	SpinLock *ft_lib_mutex;
+
 	/* freetype2 face. */
 	FT_Face face;
 
